--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
 
     <div class="content">
         <h3>we will give a very special celebration for you</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam labore fugiat ut esse perferendis perspiciatis provident dolores fuga in facilis culpa possimus, quia praesentium itaque, sapiente quasi harum rem asperiores.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat vero expedita incidunt provident quibusdam aut odit, numquam nesciunt similique nisi.</p>
-        <a href="#" class="btn">contact us</a>
+        <p>Welcome to PK events management company! We are a team of experienced and creative event professionals who specialize in creating memorable and impactful events for our clients.</p>
+        <p>PK event management company was founded with a passion for bringing people together, and we have been creating successful events for both corporate and private clients for 2 years.</p> 
+        <a href="#" class="btn">contact us</a
     </div>
 
 </div>
