--- a/index.html
+++ b/index.html
@@ -422,13 +422,13 @@
 
         <div class="box">
             <h3>quick links</h3>
-            <a href="#home"> <i class="fas fa-arrow-right"></i> home </a>
-            <a href="#service"> <i class="fas fa-arrow-right"></i> service </a>
-            <a href="#about"> <i class="fas fa-arrow-right"></i> about </a>
-            <a href="#gallery"> <i class="fas fa-arrow-right"></i> gallery </a>
-            <a href="#price"> <i class="fas fa-arrow-right"></i> price </a>
-            <a href="#reivew"> <i class="fas fa-arrow-right"></i> reivew </a>
-            <a href="#contact"> <i class="fas fa-arrow-right"></i> contact </a>
+            <a href="home"> <i class="fas fa-arrow-right"></i> home </a>
+            <a href="service"> <i class="fas fa-arrow-right"></i> service </a>
+            <a href="about"> <i class="fas fa-arrow-right"></i> about </a>
+            <a href="gallery"> <i class="fas fa-arrow-right"></i> gallery </a>
+            <a href="price"> <i class="fas fa-arrow-right"></i> price </a>
+            <a href="reivew"> <i class="fas fa-arrow-right"></i> reivew </a>
+            <a href="contact"> <i class="fas fa-arrow-right"></i> contact </a>
         </div>
 
         <div class="box">
