--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
             <a href="about"> <i class="fas fa-arrow-right"></i> about </a>
             <a href="gallery"> <i class="fas fa-arrow-right"></i> gallery </a>
             <a href="price"> <i class="fas fa-arrow-right"></i> price </a>
-            <a href="reivew"> <i class="fas fa-arrow-right"></i> reivew </a>
+            <a href="review"> <i class="fas fa-arrow-right"></i> reivew </a>
             <a href="contact"> <i class="fas fa-arrow-right"></i> contact </a>
         </div>
 
